# bomberman

./: .gitignore  CMakeCache.txt  CMakeLists.txt  FindSDL2TTF.cmake  Makefile  bomberman  bomberman.deb  compile_commands.json  main.c
00_headers/: IA.h  define.h  game.h  headers.h
02_noyeau/: noyeau.c
03_introduction/: CMakeLists.txt  introloop.c  introviews.c
04_ipchoice/: choiceiploop.c
05_game/: gameviews.c
07_network/: addNetworkPlayer.c  tcpserver.c
08_IA/: IA.c  IABonusMalus.c  IAExplosion.c  IATimer.c  IAmap.c  IApions.c  IAsendMsg.c
09_pictures/: file.c
10_lib/: CMakeLists.txt  my_put_nbr.c  my_rand.c  my_strcmp.c  my_string.c  my_strlen.c
map/: carte1.lvl
res/fonts/: Makefile
res/icon/: Makefile  cmake_install.cmake
res/map/: CMakeLists.txt
res/maps/: CMakeLists.txt  Makefile  carte2.lvl
res/pictures/: Makefile
server/: CMakeLists.txt  compile_commands.json
server/src/: CMakeLists.txt  server.c  server.h
src/: bomberman.c
src/00_headers/: annexe.h  define.h  game.h  headers.h  struct.h  structures.h
src/01_main/: CMakeLists.txt  bomberman.c  bomberman.h  define.h  game.h  headers.h  structures.h
src/02_kernel/: CMakeLists.txt  chainedlist.c  chainedlist.h  inits.c  inits.h  kernel.c  kernel.h
src/02_noyeau/: CMakeLists.txt  inits.c  listechainee.c
src/03_introduction/: CMakeLists.txt  introloop.c  introloop.h  introviews.c  introviews.h
src/04_ipchoice/: CMakeLists.txt  choiceiploop.c  choiceiploop.h  choiceipwindow.c  choiceipwindow.h  choicepviews.c  choicepviews.h
src/04_prepa_game/: CMakeLists.txt  display_prepagame.c  display_prepagame.h  loop_prepagame.c  loop_prepagame.h  write_prepa_game.c  write_prepa_game.h
src/05_game/: CMakeLists.txt  display_game.c  display_game.h  gameDisplay.c  gameLoop.c  gamePanels.c  gameTime.c  game_views.c  game_views.h  loop_game.c  loop_game.h  panel_game.c  panel_game.h  time_game.c  time_game.h  views_game.c  views_game.h
src/06_score/: CMakeLists.txt  scrviews.c
src/06_scores/: CMakeLists.txt  scrviews.c  scrviews.h  srcloop.c  srcloop.h
src/07_network/: CMakeLists.txt  addNetworkPlayer.c  tcpclient.c  tcpserver.c  tcpserver.h
src/08_IA/: IACounter.c  IADead.c  IAmonster.c  initSprites.c
src/09_pictures/: CMakeLists.txt  file.c
src/10_lib/: my_putstr.c  my_strdup.c
src/18_network/: CMakeLists.txt  addNetworkPlayer.c  network.c  network.h  network_player.c  network_player.h  tcp_client.c  tcp_client.h  tcp_server.c  tcp_server.h  tcpclient.c  tcpclient.h  tcpserver.c  tcpserver.h
src/19_ia/: CMakeLists.txt  ia.c  ia.h  ia_bolus_malus.c  ia_bolus_malus.h  ia_bomb.c  ia_bomb.h  ia_counter.c  ia_counter.h  ia_dead.c  ia_dead.h  ia_explosion.c  ia_explosion.h  ia_map.c  ia_map.h  ia_monster.c  ia_monster.h  ia_party.c  ia_party.h  ia_pions.c  ia_pions.h  ia_send_msg.c  ia_send_msg.h  ia_timer.c  ia_timer.h
src/20_pictures/: CMakeLists.txt  annexe_directory.c  annexe_directory.h  file.c  file.h  initSprites.c  initSprites.h  init_pictures.c  init_pictures.h  init_sprites.c  init_sprites.h  map.c  map.h  searchdirectory.c  searchdirectory.h
src/21_libs/: CMakeLists.txt  libs.h  my_bzero.c  my_memset.c  my_put_nbr.c  my_putchar.c  my_putstr.c  my_rand.c  my_strcat.c  my_strcmp.c  my_strdup.c  my_string.c  my_strlen.c  threads.c
src/ai/: CMakeLists.txt  ai.c  ai.h  ai_blast.c  ai_blast.h  ai_bomb.c  ai_bomb.h  ai_bonus_penalty.c  ai_bonus_penalty.h  ai_counter.c  ai_counter.h  ai_dead.c  ai_dead.h  ai_map.c  ai_map.h  ai_monster.c  ai_monster.h  ai_msg.c  ai_msg.h  ai_piece.c  ai_piece.h  ai_timer.c  ai_timer.h  sprites.c  sprites.h
src/game/: CMakeLists.txt  gameDisplay.c  gameLoop.c  gamePanels.c  gameTime.c  game_display.c  game_display.h  game_loop.c  game_loop.h  game_panels.c  game_panels.h  game_time.c  game_time.h  game_views.c  game_views.h
src/include/: ai.h  ai_backup.h  define.h  game.h  game_backup.h  headers.h  types.h
src/intro/: CMakeLists.txt  intro_loop.c  intro_loop.h  intro_views.c  intro_views.h
src/introduction/: CMakeLists.txt  introloop.c  introloop.h  introviews.c  introviews.h
src/ipchoice/: CMakeLists.txt  choice_ip_loop.c  choice_ip_loop.h  choice_ip_views.c  choice_ip_views.h  choice_ip_window.c  choice_ip_window.h  choiceiploop.c  choiceiploop.h  choicepviews.c
src/kernel/: CMakeLists.txt  cleaner.c  inits.c  inits.h  kernel.c  kernel.h  linked_list.c  linked_list.h  listechainee.c  listechainee.h
src/lib/: CMakeLists.txt  my_put_nbr.c  my_putchar.c  my_rand.c  my_strcat.c
src/memory/: CMakeLists.txt  memory.c  memory.h
src/network/: CMakeLists.txt  add_network_player.c  add_network_player.h  network.c  network.h  tcp_client.c  tcp_client.h  tcp_server.c  tcp_server.h  tcpclient.c
src/pictures/: CMakeLists.txt  file.c  file.h  sprites.c  sprites.h
src/score/: CMakeLists.txt  score_views.c  score_views.h  scrviews.c
